--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,9 +15,15 @@ jobs:
 
     - name: Install Dependencies
       run: npm install
+
+    - name: Stop the existing Application (if running)
+      run: pkill -f "node ."
     
     - name: Run Deploy Commands
       run: node ./deployCommands.js
 
     - name: Restart Main App
-      run: node .
+      run: node . &
+
+    - name: Wait for the Application to finish
+      run: wait $!
