--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "canvas": "^2.11.2",
     "chartjs-node-canvas": "^4.1.6",
     "discord.js": "^14.14.1",
+    "node-fetch": "^3.3.2",
     "tesseract.js": "^5.0.3"
   },
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
