--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "canvas": "^2.11.2",
     "chartjs-node-canvas": "^4.1.6",
     "discord.js": "^14.14.1",
-    "node-fetch": "^3.3.2",
+    "moment-timezone": "^0.5.45",
+    "node-fetch": "^2.7.0",
     "tesseract.js": "^5.0.3"
   },
   "devDependencies": {
