graceful terminate if pkill is unsuccessful

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Stop the existing Application (if running)
-        run: pkill -f "node ."
+        run: pkill -f "node ." || true
 
       - name: Run Deploy Commands
         run: node ./deployCommands.js
