--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "tesseract.js": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "^22.4.1",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3"
+    "jest-fetch-mock": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
