--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +22,11 @@
     "axios": "^1.6.2",
     "canvas": "^2.11.2",
     "chartjs-node-canvas": "^4.1.6",
+    "cron": "^3.1.7",
+    "discord-api-types": "^0.37.96",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.4.5",
     "moment-timezone": "^0.5.45",
-    "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "tesseract.js": "^5.0.3"
   },
