--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,33 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "./",  // Set rootDir to the root of your project
-    "outDir": "./dist",
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "skipLibCheck": true
-  },
-  "include": ["**/*"],  // Include all files in the project
-  "exclude": ["dist", "node_modules"]  // Exclude dist and node_modules
+    "compilerOptions": {
+        "target": "ESNext",
+        "module": "commonjs",
+        "rootDir": "./src/",
+        "outDir": "./dist/",
+        "strict": true,
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "forceConsistentCasingInFileNames": true,
+        "removeComments": true,
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "sourceMap": false,
+        "baseUrl": "./"
+    },
+    "files": [
+        "src/index.ts"
+    ],
+    "include": [
+        "./**/**/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
+    ],
 }
