--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
+    "@types/node-fetch": "^2.6.11",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
