--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +27,12 @@
     "discord-api-types": "^0.37.96",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "moment-timezone": "^0.5.45",
     "node-fetch": "^2.7.0",
-    "tesseract.js": "^5.0.3"
+    "tesseract.js": "^5.0.3",
+    "tsx": "^4.17.0"
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
