--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,38 @@
-node_modules
-previous_rate.txt
-config.json
-src/commands/daylist/*.json
-drink.json
-eng.traineddata
-.eslintrc.js
-src/commands/daylist/BASELINE_daylist.json
-src/images/
-.vs/
-.env
-node_modules
-dist
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
