--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Chart dependencies -->
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+
 		<!-- OCR dependencies -->
 		<dependency>
 			<groupId>net.sourceforge.tess4j</groupId>
