--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<version>1.6.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.17.0</version>
+		</dependency>
 
 		<!-- Chart dependencies -->
 		<dependency>
