--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.17.0</version>
 		</dependency>
+			<dependency>
+				<groupId>com.google.genai</groupId>
+				<artifactId>google-genai</artifactId>
+				<version>0.7.0</version>
+			</dependency>
+
 
 		<!-- Chart dependencies -->
 		<dependency>
