added support for griddybot to scrape and post ozbargain deals

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<artifactId>spring-graphql-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.22.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
